--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,5 +1,7 @@
 - normal:
-    content:  "<strong>2024:</strong> <strong>A Method and Device of Scoliosis Recognition Based on Symmetric Perception on Natural Image</strong>, <i>The First Inventor</i>, ZL202410850833.0"
+    content:  "<strong>2025:</strong> <strong>A Method and Device of Facial Action Unit Transfer Based on Deformable Autoencoder and Disentanglement Swap</strong>, <i>The First Inventor</i>, ZL202210444149.3"
+- normal:
+    content:  "<strong>2025:</strong> <strong>A Method and Device of Scoliosis Recognition Based on Symmetric Perception on Natural Image</strong>, <i>The First Inventor</i>, ZL202410850833.0"
 - normal:
     content:  "<strong>2024:</strong> <strong>WeChat Mini-Program V1.0 for Scoliosis Recognition Based on Symmetric Visual Perception on Natural Image</strong>, <i>Software Copyright</i>, <i>The First Inventor</i>, 2024SR1646431"
 - normal:
