--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>May 2025:</strong> Our paper <strong>Mirror Detection via Multi-Directional Similarity Perception and Spectral Saliency Enhancement</strong> is accepted by <i>IEEE TCSVT</i>."
+- normal:
     content:  "<strong>Dec. 2024:</strong> I am a recipient of <strong>Young Academic Leader Program of the China University of Mining and Technology</strong>."
 - normal:
     content:  "<strong>Dec. 2024:</strong> We obtain <strong>Best Student Paper Award</strong> in <strong>2024 CSIG Conference on Emotional Intelligence</strong>."
