--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>May 2025:</strong> Our paper <strong>Constrained and Directional Ensemble Attention for Facial Action Unit Detection</strong> is accepted by <i>Pattern Recognition</i>."
+- normal:
     content:  "<strong>May 2025:</strong> Our paper <strong>Mirror Detection via Multi-Directional Similarity Perception and Spectral Saliency Enhancement</strong> is accepted by <i>IEEE TCSVT</i>."
 - normal:
     content:  "<strong>Dec. 2024:</strong> I am a recipient of <strong>Young Academic Leader Program of the China University of Mining and Technology</strong>."
