--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -1,4 +1,8 @@
 - normal:
+    content:  "Yifan Cheng - Master Student from CUMT, 2025. Position: Ph.D. Candidate, East China Normal University"
+- normal:
+    content:  "Rui Chen - Master Student from CUMT, 2025. Position: Algorithm Engineer, SpeedBot Robotics (Shanghai)"    
+- normal:
     content:  "Yingjie Xia - Undergraduate from CUMT, 2024. Position: Master Student, Nankai University"
 - normal:
     content:  "Wentao Jiang - Undergraduate from CUMT, 2024. Position: Master Student, ShanghaiTech University"    
